# VigiScan

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Config/: AppConfig.xml  AppConfig_Default.xml  AppConfig_IPCam.xml
include/: AcquisitionUnit.h  CentralUnit.h  ImageBufferManager.h  ProcessingModule.h  RamDiskCleaner.h  inference.h  tracker.h
src/: AcquisitionUnit.cpp  CentralUnit.cpp  ImageBufferManager.cpp  ProcessingModule.cpp  RamDiskCleaner.cpp  inference.cpp  resource.aps  resource.rc  tracker.cpp
